--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,10 +4,63 @@
     <title>{% block title %}GEM Morrinhos{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
 </head>
-<body >
-    {% block content %}
+<header>
+    {% block menu_superior %}
+         <!-- Menu Superior -->
+        <nav class="top-nav p-2 shadow rounded-bottom">
+            <h1 class="site-title mb-0">GEM</h1>
+            <div class="menu-toggle" onclick="toggleSidebar()">
+                <i class="bi bi-list"></i>
+            </div>
+        </nav>
+
+        <!-- Menu Lateral -->
+        <div class="sidebar">
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </div>
     {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</header>
+<body >
+    <div class="container main-content">
+        {% block content %}
+    
+        {% endblock %}
+    </div>
 </body>
+<footer>
+    {% block menu_inferior %}
+    <nav class="bottom-nav rounded-top shadow-lg">
+        <ul class="mb-0">
+            <li><a href="#"><i style="font-size: 1.5rem;" class="bi bi-list-check"></i></a></li>
+            <!-- <li><a href="#">📱<br>Serviços</a></li>
+            <li><a href="#">📞<br>Contato</a></li> -->
+        </ul>
+    </nav>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function toggleSidebar() {
+            document.querySelector('.sidebar').classList.toggle('active');
+        }
+
+        // Fecha o menu lateral ao clicar fora dele
+        document.addEventListener('click', function(event) {
+            const sidebar = document.querySelector('.sidebar');
+            const menuToggle = document.querySelector('.menu-toggle');
+            
+            if (!sidebar.contains(event.target) && !menuToggle.contains(event.target)) {
+                sidebar.classList.remove('active');
+            }
+        });
+    </script>
+    {% endblock %}
+</footer>
 </html>
