--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 
     <div class="d-flex vh-100 justify-content-center align-items-center">
         
-            <div class="container col-5 border rounded p-5">
+            <div class="container col-10 col-sm-5 col-lg-3 border rounded p-5">
                     <h2 class="text-center mb-5">GEM Morrinhos</h2>
 
                     <!-- Exibir mensagens Flash -->
@@ -45,6 +45,9 @@
     </div>
     
 {% endblock content %}
+
+{% block  menu_inferior %}
+{% endblock %}
     
 </body>
 </html>
