--- a/app/templates/ficha.html
+++ b/app/templates/ficha.html
@@ -9,9 +9,11 @@
         </buttons>
     </div>
     <div class="col-12 mt-3">
-        <button class="btn btn-success col-12">
-            Teoria - MSA
-        </buttons>
+        <a href="{{url_for('routes.teoria')}}">
+            <button class="btn btn-success col-12">
+                Teoria - MSA
+            </buttons>
+        </a>
     </div>
     <div class="mt-3">
         <a href="{{url_for('routes.hinos')}}">
