--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
     <div class="d-flex vh-100 justify-content-center align-items-center">
         
             <div class="container col-10 col-sm-5 col-lg-3 border rounded p-5">
-                    <h2 class="text-center mb-5">GEM Morrinhos</h2>
+                    <h2 class="d-flex justify-content-center mb-5">GEM Morrinhos</h2>
 
                     <!-- Exibir mensagens Flash -->
                     {% with messages = get_flashed_messages(with_categories=true) %}
